@@ -1,0 +1,40 @@
+/*
+ * Copyright 2012 Netflix, Inc.
+ *
+ *    Licensed under the Apache License, Version 2.0 (the "License");
+ *    you may not use this file except in compliance with the License.
+ *    You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *    Unless required by applicable law or agreed to in writing, software
+ *    distributed under the License is distributed on an "AS IS" BASIS,
+ *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *    See the License for the specific language governing permissions and
+ *    limitations under the License.
+ */
+
+package com.netflix.curator.framework.imps;
+
+import com.netflix.curator.framework.CuratorFramework;
+
+/**
+ * @see CuratorFramework#getState()
+ */
+public enum CuratorFrameworkState
+{
+    /**
+     * {@link CuratorFramework#start()} has not yet been called
+     */
+    LATENT,
+
+    /**
+     * {@link CuratorFramework#start()} has been called
+     */
+    STARTED,
+
+    /**
+     * {@link CuratorFramework#close()} has been called
+     */
+    STOPPED
+}
